<resources>
    <string name="app_name">ClinUP</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="botao_alterar">Salvar</string>
    <string name="texto_validacao">Validação</string>
    <string name="botao_validar">Validar</string>
    <string name="botao_logar">Logar</string>
    <string name="texto_cadastre">Não tem conta? Cadastre-se!</string>
    <string name="item_configuracao">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adiciona">Adicionar</string>
    <string name="carregando">Carregando os dados</string>
    <string name="google_sign_up">Continue with Google</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_nome">Digite seu nome</string>

    <string name="facebook_app_id">478683035902050</string>
    <string name="fb_login_protocol_scheme">fb478683035902050</string>
    <string name="msg_dialog_excluir_conta">Para sua segurança, precisamos confirmar o seu e-mail e senha</string>
    <string name="titulo_dialog_excluir_conta">Excluir Conta</string>
    <string name="text_senha">*Senha</string>
    <string name="title_activity_principal">ClinUP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_teste_calendar">testeCalendar</string>

    <string name="err_msg_name">Entre com o seu nome</string>
    <string name="err_msg_email">Entre com um e-mail válido</string>
    <string name="err_msg_password">Entre com uma senha</string>
    <string name="err_msg_cpf">Entre com um CPF</string>
    <string name="botao_agendar">Agendar</string>
    <string name="titulo_dialog_Agendamento">Agendar</string>
    <string name="msg_dialog_agendamento">Para sua segurança, precisamos que você confirme se deseja realmente agendar</string>
    <string name="cidade">*Cidade</string>
    <string name="bairro">*Bairro</string>
    <string name="n"> Nº</string>
    <string name="complemento">Complemento</string>
    <string name="rua">*Rua</string>
    <string name="esqueci_o_cep">Esqueci o CEP</string>
    <string name="cep">*CEP</string>
    <string name="endere_o">Endereço</string>
    <string name="logo_clinup">Logo ClinUP</string>
    <string name="visualizar_perfil"><u>Clique para visualizar perfil</u></string>
    <string name="_87_99999_9999">(87)99999–9999</string>
    <string name="nome">*Nome</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="n_registro">Nº Registro</string>
    <string name="agendar">Agendar</string>
    <string name="local_de_atendimento">Local de Atendimento</string>
    <string name="telefone">Telefone</string>
    <string name="especialidade">Especialidade</string>
    <string name="n_mero_de_registro">Número de Registro</string>
    <string name="n_o_informado">Não Informado</string>
    <string name="e_mail">*E-mail</string>
    <string name="cpf">*CPF</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="editar_cadastro">Editar Cadastro</string>
    <string name="buscar">Buscar</string>
    <string name="filtro">Filtro</string>
    <string name="todo">TODO</string>

    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>
    <string name="titulo_dialog_cancelamento">Cancelar</string>
    <string name="msg_dialog_cancelamento">Deseja mesmo cancelar este agendamento?</string>
    <string name="titulo_dialog_excluir_favorito">Excluir</string>
    <string name="msg_dialog_excluir_favorito">Deseja mesmo excluir este favorito?</string>
    <string name="hor_rio_de_funcionamento">Horário de Funcionamento</string>

    <string name="selecione_o_filtro">Selecione o Filtro</string>

    <string name="filtro2">Filtro:</string>
    <string name="resultado_endere_os">Resultado (endereços)</string>
    <string name="busque_seu_cep">Busque seu CEP</string>
    <string name="numero">(87)99999–9999</string>
    <string name="n_plano_de_sa_de">Nº Plano de Saúde</string>
    <string name="plano_de_sa_de_opicional">Plano de Saúde (Opicional)</string>
    <string name="nNome">Nome</string>
    <string name="nE_mail">E-mail</string>
    <string name="nCpf">CPF</string>
    <string name="digite_e_mail">*Digite seu e-mail</string>


</resources>
