<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/edit_login_emailID"
        android:layout_width="356dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="138dp"
        android:ems="10"
        android:hint="@string/digite_seu_e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/edit_login_senhaID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login_senhaID"
        android:layout_width="356dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/botao_logarID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_emailID" />

    <Button
        android:id="@+id/botao_logarID"
        android:layout_width="356dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:text="@string/botao_logar"
        android:theme="@style/botaoPadrao"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_senhaID" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/texto_cadastre"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_logarID" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.100000024" />


</android.support.constraint.ConstraintLayout>