<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cadastro"
    tools:context=".activity.AlterarCadastroUsuario"
    tools:layout_editor_absoluteY="25dp">

    <include
        android:id="@+id/toolbarActivity"
        layout="@layout/toolbar_activity"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarActivity">


        <!-- Nome -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_NomeID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="28dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_EmailID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_cadastro_nomeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- E-mail -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_nascimentoID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_TelefoneID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_EmailID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_dataNascimentoID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_aaaa"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Cpf -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_CpfID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_NomPlanoID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_TelefoneID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_cadastro_cpfID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Nome do Plano de Saúde -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_NomPlanoID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_NumPlanoID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_CpfID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_nomePlanoID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plano_de_sa_de_opicional"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Número do Plano de Saúde -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_NumPlanoID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_SenhaID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_NomPlanoID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_numPlanoID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_plano_de_sa_de"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Telefone -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_TelefoneID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_CpfID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_nascimentoID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_numTelefoneID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_EmailID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:theme="@style/StyleEditText"
            app:layout_constraintBottom_toTopOf="@+id/textInput_nascimentoID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_NomeID">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_cadastro_emailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/botao_alterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/botao_alterar"
            android:theme="@style/botaoPadrao" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
